buggy: client exits early.

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -4,7 +4,7 @@ tasks:
   server:
     desc: Start TFTP server
     cmds:
-      - go run cmd/tftpd/main.go -port 69 -root ./tftp-root
+      - go run cmd/tftpd/main.go -port 69 -root ./cmd/tftpd/tftp-root
 
   get:
     desc: Client GET request
