feat: command to generate 200MiB readable file, human readable size, bug fix: appends to file instead of rewriting whole file

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -10,3 +10,7 @@ tasks:
     desc: Client GET request
     cmds:
       - go run cmd/tftp/main.go -mode get -remote-address localhost:69 -remote-path test.txt -host-path downloaded.txt
+
+  generate-test-file:
+    cmds:
+      - head -c 209715200 /dev/urandom | base64 > ./cmd/tftpd/tftp-root/test.txt
